--- a/main.html
+++ b/main.html
@@ -1,16 +1,35 @@
 <!DOCTYPE html>
 
-<html>
+<html
+ 
+lang="en">
 
 <head>
-	<link rel="stylesheet" href="styles.css">
+
+  
+<meta
+ 
+charset="UTF-8">
+
+  
+<meta
+ 
+name="viewport"
+ 
+content="width=device-width, initial-scale=1.0">
+
+  
+<title>Hero Section</title>
+  <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-
+  <div class="hero">
+    <img src="https://picsum.photos/1200/800?image=100" alt="Hero image" class="hero__image">
+    <div class="hero__content">
+      <h1>Adventure Awaits</h1>
+      <p>Explore new lands, discover hidden treasures, and create memories that will last a lifetime.</p>
+      <a href="#" class="https://images.pexels.com/photos/2662116/pexels-photo-2662116.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1">Explore Now</a>
+    </div>
+  </div>
 </body>
-
 </html>
